feat: initial setup and mapper utils

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,154 +1,154 @@
-     1	line-length = 88
-     2	required-version = ">=0.13.0"
-     3	fix = true
-     4	unsafe-fixes = true
-     5	
-     6	[lint]
-     7	select = [
-     8	    "FAST",
-     9	    "ANN001",
-    10	    "ANN201",
-    11	    "ANN202",
-    12	    "ANN204",
-    13	    "ANN205",
-    14	    "ANN206",
-    15	    "ASYNC110",
-    16	    "ASYNC116",
-    17	    "ASYNC210",
-    18	    "ASYNC230",
-    19	    "ASYNC251",
-    20	    "S310",
-    21	    "FBT001",
-    22	    "FBT002",
-    23	    "B002",
-    24	    "B005",
-    25	    "B006",
-    26	    "B007",
-    27	    "B008",
-    28	    "B009",
-    29	    "B010",
-    30	    "B013",
-    31	    "B014",
-    32	    "B019",
-    33	    "B020",
-    34	    "B021",
-    35	    "B024",
-    36	    "B025",
-    37	    "B026",
-    38	    "B027",
-    39	    "B039",
-    40	    "COM",
-    41	    "C402",
-    42	    "C403",
-    43	    "C404",
-    44	    "C408",
-    45	    "C410",
-    46	    "C411",
-    47	    "C414",
-    48	    "C416",
-    49	    "C417",
-    50	    "C418",
-    51	    "C419",
-    52	    "C420",
-    53	    "DTZ",
-    54	    "EXE",
-    55	    "ISC001",
-    56	    "ISC002",
-    57	    "ISC003",
-    58	    "PIE",
-    59	    "PYI009",
-    60	    "PYI010",
-    61	    "PYI011",
-    62	    "PYI012",
-    63	    "PYI013",
-    64	    "PYI016",
-    65	    "PYI017",
-    66	    "PYI019",
-    67	    "PYI020",
-    68	    "PYI021",
-    69	    "PYI024",
-    70	    "PYI026",
-    71	    "PYI030",
-    72	    "PYI033",
-    73	    "PYI034",
-    74	    "PYI036",
-    75	    "PYI041",
-    76	    "PYI042",
-    77	    "PYI055",
-    78	    "PYI061",
-    79	    "PYI062",
-    80	    "PYI063",
-    81	    "RSE102",
-    82	    "RET501",
-    83	    "RET505",
-    84	    "RET506",
-    85	    "RET507",
-    86	    "RET508",
-    87	    "SIM101",
-    88	    "SIM102",
-    89	    "SIM103",
-    90	    "SIM107",
-    91	    "SIM108",
-    92	    "SIM109",
-    93	    "SIM110",
-    94	    "SIM114",
-    95	    "SIM115",
-    96	    "SIM201",
-    97	    "SIM202",
-    98	    "SIM210",
-    99	    "SIM211",
-   100	    "SIM212",
-   101	    "SIM300",
-   102	    "SIM401",
-   103	    "SIM910",
-   104	    "TID252",
-   105	    "TC",
-   106	    "FLY",
-   107	    "I",
-   108	    "C901",
-   109	    "N",
-   110	    "PERF",
-   111	    "E",
-   112	    "W",
-   113	    "D404",
-   114	    "D417",
-   115	    "D419",
-   116	    "F",
-   117	    "PGH",
-   118	    "PLC1901",
-   119	    "UP",
-   120	    "FURB",
-   121	    "RUF",
-   122	    "TRY",
-   123	]
-   124	ignore = [
-   125	    "COM812",
-   126	    "PGH003",
-   127	    "RUF001",
-   128	    "RUF002",
-   129	    "RUF003",
-   130	    "RUF006",
-   131	    "RUF012",
-   132	    "TRY400",
-   133	    "TRY003",
-   134	    "TRY301",
-   135	    "RUF029",
-   136	]
-   137	
-   138	[lint.flake8-quotes]
-   139	docstring-quotes = "single"
-   140	
-   141	[lint.flake8-type-checking]
-   142	runtime-evaluated-base-classes = [
-   143	    "pydantic.BaseModel",
-   144	    "sqlalchemy.orm.DeclarativeBase",
-   145	]
-   146	
-   147	[lint.pylint]
-   148	allow-dunder-method-names = ["__tablename__", "__table_args__"]
-   149	
-   150	
-   151	[format]
-   152	docstring-code-format = true
-   153	preview = true
-   154	quote-style = "single"
+line-length = 88
+required-version = ">=0.13.0"
+fix = true
+unsafe-fixes = true
+
+[lint]
+select = [
+    "FAST",
+    "ANN001",
+    "ANN201",
+    "ANN202",
+    "ANN204",
+    "ANN205",
+    "ANN206",
+    "ASYNC110",
+    "ASYNC116",
+    "ASYNC210",
+    "ASYNC230",
+    "ASYNC251",
+    "S310",
+    "FBT001",
+    "FBT002",
+    "B002",
+    "B005",
+    "B006",
+    "B007",
+    "B008",
+    "B009",
+    "B010",
+    "B013",
+    "B014",
+    "B019",
+    "B020",
+    "B021",
+    "B024",
+    "B025",
+    "B026",
+    "B027",
+    "B039",
+    "COM",
+    "C402",
+    "C403",
+    "C404",
+    "C408",
+    "C410",
+    "C411",
+    "C414",
+    "C416",
+    "C417",
+    "C418",
+    "C419",
+    "C420",
+    "DTZ",
+    "EXE",
+    "ISC001",
+    "ISC002",
+    "ISC003",
+    "PIE",
+    "PYI009",
+    "PYI010",
+    "PYI011",
+    "PYI012",
+    "PYI013",
+    "PYI016",
+    "PYI017",
+    "PYI019",
+    "PYI020",
+    "PYI021",
+    "PYI024",
+    "PYI026",
+    "PYI030",
+    "PYI033",
+    "PYI034",
+    "PYI036",
+    "PYI041",
+    "PYI042",
+    "PYI055",
+    "PYI061",
+    "PYI062",
+    "PYI063",
+    "RSE102",
+    "RET501",
+    "RET505",
+    "RET506",
+    "RET507",
+    "RET508",
+    "SIM101",
+    "SIM102",
+    "SIM103",
+    "SIM107",
+    "SIM108",
+    "SIM109",
+    "SIM110",
+    "SIM114",
+    "SIM115",
+    "SIM201",
+    "SIM202",
+    "SIM210",
+    "SIM211",
+    "SIM212",
+    "SIM300",
+    "SIM401",
+    "SIM910",
+    "TID252",
+    "TC",
+    "FLY",
+    "I",
+    "C901",
+    "N",
+    "PERF",
+    "E",
+    "W",
+    "D404",
+    "D417",
+    "D419",
+    "F",
+    "PGH",
+    "PLC1901",
+    "UP",
+    "FURB",
+    "RUF",
+    "TRY",
+]
+ignore = [
+    "COM812",
+    "PGH003",
+    "RUF001",
+    "RUF002",
+    "RUF003",
+    "RUF006",
+    "RUF012",
+    "TRY400",
+    "TRY003",
+    "TRY301",
+    "RUF029",
+]
+
+[lint.flake8-quotes]
+docstring-quotes = "single"
+
+[lint.flake8-type-checking]
+runtime-evaluated-base-classes = [
+    "pydantic.BaseModel",
+    "sqlalchemy.orm.DeclarativeBase",
+]
+
+[lint.pylint]
+allow-dunder-method-names = ["__tablename__", "__table_args__"]
+
+
+[format]
+docstring-code-format = true
+preview = true
+quote-style = "single"
