feat: db module implemented

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "sqlalchemy[asyncio]>=2.0.44",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.8",
+]
